--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -329,10 +329,10 @@
 
  <li><h3 id="h_1">Determine if the payment made is for a good or a service</h3>
 <div id="ajax-service">
-<p>If you paid for a service that involves the provision of goods, you may need to determine its characterization as a service or as a good.</p>
-<p>The terms <strong>goods</strong> and <strong>services</strong> are <strong>not</strong> defined in the Income Tax Act (ITA).</p>
+<p>If you paid for a service that involves the provision of goods, you may need to determine its characterization as a good or a service.</p>
+<p>The terms <strong>goods</strong> and <strong>services</strong> are <strong>not</strong> defined in the Income Tax Act (ITA) for the purpose of reporting the payment of fees for services. To determine its characterization, you must review the circumstances of the transaction and consider a number of factors established by the courts.</p>
 <h4>Guidance indicating if the payment is for a good or a service</h4>
-<p>You may use the following guidance to help you if you are not sure if the payment is for a good or a service:</p>
+<p>You may use the following guidance (based on court cases) to help you if you are not sure if the payment is for a good or a service: </p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -359,7 +359,7 @@
 
  
 </ul>
-<p>Whether an amount paid is for a service or a good is a question of fact that can only be determined after a review of all of the relevant facts and circumstances.</p>
+<p>Whether an amount paid is for a service or a good is a question of fact that can only be determined after a review of all of the relevant facts and circumstances.  </p>
 <p>If you are not sure if the payment is for a service or a good, you can <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>.</p>
 
 <details><summary>Example</summary>
