--- a/fhsa/v2/deductions.html
+++ b/fhsa/v2/deductions.html
@@ -67,7 +67,7 @@
 
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Which contributions can you deduct in a year</a></li>
+               <li><a href="#h-1">Contributions you can deduct in a year</a></li>
 		                   <li><a href="#h-2">How much can you deduct</a></li>
 
 		                   <li><a href="#h-5">Deductions when you have an excess FHSA amount</a></li>
@@ -346,7 +346,7 @@
 
      
 
-  <h2 id="h-1">How much can you deduct</h2>
+  <h2 id="h-2">How much can you deduct</h2>
           <p>The contributions that you make to your FHSAs may be deductible on your income tax and benefit return for the year of the contribution or a future year, similar to RRSP contributions.</p>
 <p>The maximum amount that you may deduct in respect of your FHSA contributions is the <strong>lesser</strong> of:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
