--- a/fhsa/v2/deductions.html
+++ b/fhsa/v2/deductions.html
@@ -59,7 +59,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Tax deductions for FHSA contributions</h1>
-        <p>Contributions that you make to your first home savings <span class="nowrap">accounts (FHSAs)</span> are generally deductible on your income tax and benefit return. It is important to note that transfers from your <a href="#rrsp" aria-controls="rrsp" class="wb-lbx" role="button">registered retirement saving <span class="nowrap">plans (RRSPs)&nbsp;</span><span class="far fa-question-circle"></span></a> to your FHSAs <strong>are not deductible</strong>.</p>
+        <p>Contributions that you make to your first home savings <span class="nowrap">accounts (FHSAs)</span> are generally deductible on your income tax and benefit return. It is important to note that transfers from your registered retirement saving plans (RRSPs) to your FHSAs <strong>are not deductible</strong>.</p>
 
 
 	
