--- a/fhsa/v2/deductions.html
+++ b/fhsa/v2/deductions.html
@@ -410,7 +410,7 @@
 	<p>You will have an excess FHSA amount if the total of your contributions to your FHSAs and transfers from your RRSPs to your FHSAs for the year are more than your FHSA participation room for the year.</p>
 <p>If you have an excess FHSA amount, the deductibility of the amounts carried forward may be impacted. In order to determine the actual amount of FHSA deduction that you may claim when you have an excess FHSA amount, go to <a href="#h_1">How much can you deduct</a>.</p>
 
-	<p>If you have made both contributions and transfers to your FHSAs which created an excess FHSA amount, the deductibility of your contributions may be impacted. For more information, <span class="nowrap">g</span>o to <a href="#h_5">Deductions when you have an excess FHSA amount</a>.</p>
+	<p>If you have made both contributions and transfers to your FHSAs which created an excess FHSA amount, the deductibility of your contributions may be impacted.</p>
 </div>
  <ul class="list-unstyled" id="details-elements-41778">
         
