--- a/fhsa/v2/toomuch.html
+++ b/fhsa/v2/toomuch.html
@@ -80,7 +80,7 @@
 
 	 
             <h2 id="h-2">Tax on excess FHSA amounts</h2>
-          <p>Generally, you have to pay <strong>a tax of 1% per month on the highest excess FHSA amount in that month</strong>. You will continue to pay the monthly 1% tax until the excess FHSA amount is eliminated. Your excess FHSA amount will be reduced or eliminated by your new FHSA participation room (on <span class="nowrap">January 1</span> of the following year), or by removing amounts from your FHSAs. For more information on how to eliminate your excess FHSA amount, go to <a href="#h_3">Removing excess FHSA amounts</a>.&nbsp;</p>
+          <p>Generally, you have to pay <strong>a tax of 1% per month on the highest excess FHSA amount in that month</strong>. You will continue to pay the monthly 1% tax until the excess FHSA amount is eliminated. Your excess FHSA amount will be reduced or eliminated by your new FHSA participation room (on <span class="nowrap">January 1</span> of the following year), or by removing amounts from your FHSAs. </p>
 <p>If you have an excess FHSA amount, you must file a return to report your excess FHSA amount and determine the amount of tax payable. <span class="label label-info">More information about the return and when it will have to be filed will be available at a later date.</span></p>
 
     
@@ -224,10 +224,12 @@
 <li class="cnjnctn-col">Making a taxable withdrawal from your FHSA</li>
 <li class="cnjnctn-col">Any amounts deemed to be included in income if the account loses its status as an FHSA</li>
 </ul>
+	<h3>Designated withdrawals and transfers</h3>
 <p>If you make a designated withdrawal, the amount of the withdrawal is not required to be included as income on your income tax and benefit return of that year.</p>
 <p>If you make a designated transfer, the amount of the transfer is not required to be included as income on your income tax and benefit return of that year. A designated transfer will not impact your <a href="#unusedrrsp" aria-controls="unusedrrsp" class="wb-lbx" role="button">unused RRSP deduction room&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 <p>It is important to note that a designated amount is limited to the excess FHSA amount at the time of the designation. As a result, you are not able to designate an amount if you do not have an excess FHSA amount.</p>
-<p>If you make a taxable withdrawal, the amount withdrawn must be included as income on your income tax and benefit return for the year received.</p>
+<h3>Taxable withdrawals</h3>
+	<p>If you make a taxable withdrawal, the amount withdrawn must be included as income on your income tax and benefit return for the year received.</p>
 
     
 
