--- a/fhsa/v2/toomuch.html
+++ b/fhsa/v2/toomuch.html
@@ -237,17 +237,17 @@
 <p>In order to make a <a href="#designatedamounts" aria-controls="designatedamounts" class="wb-lbx" role="button">designated withdrawal or designated transfer&nbsp;<span class="far fa-question-circle"></span></a> you&nbsp;must fill out a form and contact your FHSA&nbsp;<span class="nowrap"><a href="#issuer" aria-controls="issuer" class="wb-lbx" role="button">issuer&nbsp;<span class="far fa-question-circle"></span></a>. </span><span class="label label-info">More information about the form will be available at a later date.</span></p>
 <p>If you <strong>only</strong> made contributions to your FHSAs up to the date of designation:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li fa-lg"></span>You <strong>can</strong> only make a designated withdrawal to reduce or eliminate your excess FHSA amount.</li>
-<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You&nbsp;<strong>cannot</strong>&nbsp;make a designated transfer.</li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span>You can only make a designated withdrawal to reduce or eliminate your excess FHSA amount.</li>
+<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You&nbsp;cannot&nbsp;make a designated transfer.</li>
 </ul>
 <p>If you <strong>only</strong> made transfers from your RRSPs to your FHSAs up to the date of designation:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li fa-lg"></span>You <strong>can</strong> only make a designated transfer to reduce or eliminate your excess FHSA amount.</li>
-<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You&nbsp;<strong>cannot</strong>&nbsp;make a designated withdrawal.</li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span>You can only make a designated transfer to reduce or eliminate your excess FHSA amount.</li>
+<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You&nbsp;cannot&nbsp;make a designated withdrawal.</li>
 </ul>
 <p>If you made both transfers from your RRSPs to your FHSAs and contributions to your FHSAs:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li fa-lg"></span>You <strong>can</strong> make a designated withdrawal or designated transfer to reduce or eliminate your excess FHSA amount, with certain restrictions.</li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span>You can make a designated withdrawal or designated transfer to reduce or eliminate your excess FHSA amount, with certain restrictions.</li>
 </ul>
 <p>The amount of your designated withdrawal <strong>cannot</strong> exceed the total amount of contributions to your FHSAs as of the date of designation <strong>minus</strong> the total amount of any previously designated withdrawals.</p>
 <p>The amount of your designated transfer <strong>cannot</strong> exceed the total amount of transfers to your FHSAs as of the date of designation <strong>minus</strong> the total amount of any previously designated transfers.</p>
