--- a/fhsa/v2/toomuch.html
+++ b/fhsa/v2/toomuch.html
@@ -227,7 +227,7 @@
 	<h3>Designated withdrawals and transfers</h3>
 <p>If you make a designated withdrawal, the amount of the withdrawal is not required to be included as income on your income tax and benefit return of that year.</p>
 <p>If you make a designated transfer, the amount of the transfer is not required to be included as income on your income tax and benefit return of that year. A designated transfer will not impact your <a href="#unusedrrsp" aria-controls="unusedrrsp" class="wb-lbx" role="button">unused RRSP deduction room&nbsp;<span class="far fa-question-circle"></span></a>.</p>
-<p>It is important to note that a designated amount is limited to the excess FHSA amount at the time of the designation. As a result, you are not able to designate an amount if you do not have an excess FHSA amount.</p>
+<p>It is important to note that a designated amount is limited to the excess FHSA amount at the time of the designation. You are not able to designate an amount if you do not have an excess FHSA amount.</p>
 <h3>Taxable withdrawals</h3>
 	<p>If you make a taxable withdrawal, the amount withdrawn must be included as income on your income tax and benefit return for the year received.</p>
 
@@ -252,7 +252,6 @@
 <p>The amount of your designated withdrawal <strong>cannot</strong> exceed the total amount of contributions to your FHSAs as of the date of designation <strong>minus</strong> the total amount of any previously designated withdrawals.</p>
 <p>The amount of your designated transfer <strong>cannot</strong> exceed the total amount of transfers to your FHSAs as of the date of designation <strong>minus</strong> the total amount of any previously designated transfers.</p>
 <p>Depending on your situation, you may be required to make both a designated withdrawal and a designated transfer to eliminate your excess FHSA amount.</p>
-<p>It is important to note that a designated amount is limited to the excess FHSA amount at the time of designation. As a result, you are <strong>not</strong> able to designate an amount if you do not have an excess FHSA amount.</p>
 
     
 
