--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -327,12 +327,12 @@
 
 <ol class="lst-stps stps-strpd">
 
- <li><h3 id="h_1">Determine if the payment made is for a good or a service</h3>
+ <li><h3 id="h_1">Determine if the payment made is for a good or for a service</h3>
 <div id="ajax-service">
-<p>If you paid for a service that involves the provision of goods, you may need to determine its characterization as a good or a service.</p>
+<p>If you paid for a service that involves the provision of goods, you may need to determine its characterization as a good or as a service.</p>
 <p>The terms <strong>goods</strong> and <strong>services</strong> are <strong>not</strong> defined in the Income Tax Act (ITA) for the purpose of reporting the payment of fees for services. To determine its characterization, you must review the circumstances of the transaction and consider a number of factors established by the courts.</p>
-<h4>Guidance on the factors to consider established by the courts</h4>
-<p>You may use the following guidance to help you if you are not sure if the payment is for a good or a service. The courts have considered the following factors: </p>
+<h4>General meaning and factors to consider established by the courts</h4>
+<p>You may use the following to understand the general meaning of the terms and the factors to consider established by the courts if you are not sure if the payment is for a good or for a service: </p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
