--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -352,7 +352,7 @@
                       <ul class="fa-ul mrgn-bttm-lg">
                         <li><span class="fas fa-check fa-li text-success"></span> The actions of serving, helping or benefitting another</li>
                        
-                        <li><span class="fas fa-check fa-li text-success"></span> The work of the hand or the brain, which is valuable to the purchaser or user, but which is not an article of trade and commerce or a tangible final product</li>
+                        <li><span class="fas fa-check fa-li text-success"></span> The work of the hand or the brain, which is valuable to the purchaser or user and not an item made to be used in a production process or a tangible final product</li>
                      </ul>
               
   </li> 
