--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -961,7 +961,7 @@ input[type='radio'] {
             
 
                 
-<p><strong>[Rescue link to vacant tax?]</strong></p>
+<p><strong>[Content about vacancy tax?]</strong></p>
 
                 <section>
                     <nav aria-label="Section menu">
@@ -970,7 +970,7 @@ input[type='radio'] {
                             <li><a href="whomust.html">Who must file a return and pay the tax</a><br>
                                 [Details]
                             </li>
-				<li><a href="duedate.html">Filing and payment due date</a><br>
+				<li><a href="duedate.html">When to send the return and pay the tax</a><br>
                                 [Details]
                             </li>
                             <li><a href="complete-return.html">Complete the return</a><br>
