--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Filing and payment due date - Underused Housing Tax - Canada.ca</title>
+         <title>When to send the return and pay the tax - Underused Housing Tax - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name=”robots” content=”noindex, follow”>
          <!-- Meta data -->
@@ -781,7 +781,7 @@ margin-left: 38px;
                <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
               <ul class="gc-navseq">
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
-		      <li class="active"><a aria-current="page"><a href="duedate.html">Filing and payment due date</span></a></li>
+		      <li class="active"><a aria-current="page"><a href="duedate.html">When to send the return and pay the tax</span></a></li>
 		      <li><a href="complete-return.html">Complete the return</span></a></li>
                 <li><a href="sendreturn.html">Send the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
@@ -792,7 +792,7 @@ margin-left: 38px;
             </nav>
          </section>
          <section class="gc-nav-section experimental provisional">
-            <h1 property="name" id="wb-cont">Filing and payment due date</h1>
+            <h1 property="name" id="wb-cont">When to send the return and pay the tax</h1>
            
 		
 	  
