--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -133,11 +133,11 @@
 		 
 		 		 		 <h2 id="h-6">Advanced payment dates for the Canada Workers Benefit</h2>
 		 <p>The CWB is issued in 3 quarterly payments, on:</p>
-		 <ul>
-			<li>July 12</li> 
-			 <li>October 12</li> 
-			 <li>January 12</li>
-		 </ul>
+		<ul class="fa-ul">
+<li><span class="far fa-calendar fa-li text-muted fa-li"></span>July 12</li> 
+<li><span class="far fa-calendar fa-li text-muted fa-li"></span>October 12</li> 
+<li><span class="far fa-calendar fa-li text-muted fa-li"></span>January 12</li>
+</ul>
 <div class="alert alert-info">
                         <h4>Payment dates for this year</h4>
                         
