--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -82,14 +82,18 @@
             </ul>
             <h2 id="h-1">Basic benefit maximum amount</h2>
             <p>The maximum basic amount for the CWB is:</p>
-            <ul>
-	<li> 
+           <div class="cnjnctn-type-or cnjnctn-sm">
+        <div class="cnjnctn-col">
+          <h4 class="mrgn-tp-sm text-muted">$1,428 for single individuals<span class="wb-inv">: Option 1 of 2</span></h4>
             
-		<p><strong>$1,428 for single individuals</strong></p>
 		    <p>The amount is gradually reduced if your adjusted net income is more than $23,495. No basic amount is paid if your adjusted net income is more than $33,015.</p></li>
-		    <li><p><strong>$2,461 for families</strong></p>
+ </div>
+        <div class="cnjnctn-col">
+          <h4 class="mrgn-tp-sm text-muted">$2,461 for families<span class="wb-inv">: Option 2 of 2</span></h4>
+		
 		    <p>The amount is gradually reduced if your adjusted family net income is more than $26,805. No basic amount is paid if your adjusted family net income is more than $43,212.</p></li>
-            </ul>
+	</div></div>
+		
             <p>The maximum basic CWB amount will vary for residents of Quebec, Nunavut and Alberta.
          
 		 
