--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -99,12 +99,17 @@
 		 
             <h2 id="h-2">Disability supplement maximum amount</h2>
             <p>The maximum amount for the disability supplement is:</p>
-		 <ul>
-			 <li><p><strong>$737 for single individuals</strong></p>
+		 <div class="cnjnctn-type-or cnjnctn-sm">
+        <div class="cnjnctn-col">
+          <h4 class="mrgn-tp-sm text-muted">$737 for single individuals<span class="wb-inv">: Option 1 of 2</span></h4>
+			
 			 <p>The CWB disability supplement is gradually reduced if your adjusted net income is more than $33,018. No disability supplement is paid if your adjusted net income is more than $37,932.</p></li>
-			 <li><p><strong>$737 for families</strong></p>
+			</div>
+        <div class="cnjnctn-col">
+          <h4 class="mrgn-tp-sm text-muted">$737 for families<span class="wb-inv">: Option 2 of 2</span></h4>
+		
 				 <p>The CWB disability supplement is gradually reduced if your adjusted family net income is more than $43,210. No disability supplement is paid if one spouse is eligible for the disability tax credit and your adjusted family net income is more than $48,124, or if both spouses are eligible for the disability tax credit and your adjusted family net income is more than $53,037.</p></li>
-		 </ul>
+	</div></div>
 			 <p>The maximum amount for the disability supplement will vary for residents of Quebec and Nunavut.
 		 
 		 
