--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -84,7 +84,7 @@
             <p>The maximum basic amount for the CWB is:</p>
            <div class="cnjnctn-type-or cnjnctn-sm">
         <div class="cnjnctn-col">
-          <h4 class="mrgn-tp-sm text-muted">$1,428 for single individuals<span class="wb-inv">: Option 1 of 2</span></h4>
+          <h4><strong>$1,428 for single individuals</strong><span class="wb-inv">: Option 1 of 2</span></h4>
             
 		    <p>The amount is gradually reduced if your adjusted net income is more than $23,495. No basic amount is paid if your adjusted net income is more than $33,015.</p></li>
  </div>
