--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -89,7 +89,7 @@
 		    <p>The amount is gradually reduced if your adjusted net income is more than $23,495. No basic amount is paid if your adjusted net income is more than $33,015.</p></li>
  </div>
         <div class="cnjnctn-col">
-          <h4 class="mrgn-tp-sm text-muted">$2,461 for families<span class="wb-inv">: Option 2 of 2</span></h4>
+          <h4><strong>$2,461 for families</strong><span class="wb-inv">: Option 2 of 2</span></h4>
 		
 		    <p>The amount is gradually reduced if your adjusted family net income is more than $26,805. No basic amount is paid if your adjusted family net income is more than $43,212.</p></li>
 	</div></div>
@@ -101,12 +101,12 @@
             <p>The maximum amount for the disability supplement is:</p>
 		 <div class="cnjnctn-type-or cnjnctn-sm">
         <div class="cnjnctn-col">
-          <h4 class="mrgn-tp-sm text-muted">$737 for single individuals<span class="wb-inv">: Option 1 of 2</span></h4>
+          <h4><strong>$737 for single individuals</strong><span class="wb-inv">: Option 1 of 2</span></h4>
 			
 			 <p>The CWB disability supplement is gradually reduced if your adjusted net income is more than $33,018. No disability supplement is paid if your adjusted net income is more than $37,932.</p></li>
 			</div>
         <div class="cnjnctn-col">
-          <h4 class="mrgn-tp-sm text-muted">$737 for families<span class="wb-inv">: Option 2 of 2</span></h4>
+          <h4><strong>$737 for families</strong><span class="wb-inv">: Option 2 of 2</span></h4>
 		
 				 <p>The CWB disability supplement is gradually reduced if your adjusted family net income is more than $43,210. No disability supplement is paid if one spouse is eligible for the disability tax credit and your adjusted family net income is more than $48,124, or if both spouses are eligible for the disability tax credit and your adjusted family net income is more than $53,037.</p></li>
 	</div></div>
