--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -71,6 +71,8 @@
             <ul>
                <li><a href="#h-1">Who can open an FHSA</a></li>
                <li><a href="#h-2">How to open an FHSA</a></li>
+		                   <li><a href="#h-3">When to close an FHSA</a></li>
+
               
             </ul>
             <h2 id="h-1">Who can open an FHSA</h2>
