--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -354,7 +354,7 @@
                       <ul class="fa-ul mrgn-bttm-lg">
                         <li><span class="fas fa-check fa-li text-success"></span> The actions of serving, helping or benefitting another (for example: legal advice, house cleaning, consulting services)</li>
                        
-                        <li><span class="fas fa-check fa-li text-success"></span> The work of the hand or the brain, which is valuable to the purchaser or user and is <strong>not</strong> articles of trade and commerce, or a tangible final product (for example: )</li>
+                        <li><span class="fas fa-check fa-li text-success"></span> The physical or intellectual work itself, <strong>not</strong> the article of trade or commerce or tangible finished product produced by that work</li>
                      </ul>
               
   </li> 
