--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -330,10 +330,10 @@
  <li><h3 id="h_1">Determine if the payment made is for a good or for a service</h3>
 <div id="ajax-service">
 <p>If you paid for a service that involves the provision of goods, you may need to determine its characterization as a good or as a service.</p>
-<p>The terms <strong>goods</strong> and <strong>services</strong> are <strong>not</strong> defined in the Income Tax Act (ITA) for the purpose of reporting the payment of fees for services. The terms should be understood in their ordinary meaning and the meaning used by the courts.</p>
+<p class="mrgn-bttm-md">The terms <strong>goods</strong> and <strong>services</strong> are <strong>not</strong> defined in the Income Tax Act (ITA) for the purpose of reporting the payment of fees for services. The terms should be understood in their ordinary meaning and the meaning used by the courts.</p>
 
 <h4>Guidance indicating if the payment is for a good or for a service</h4>
-<p>You may use the following guidance, based on the ordinary and legal meanings of the terms goods and services, to help you if you are not sure if the payment is for a good or a service:</p> 
+<p>You may use the following guidance, based on the ordinary and legal meanings of the terms goods and services, to help you if you are not sure if the payment is for a good or for a service:</p> 
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
