--- a/subway/acwb/claim.html
+++ b/subway/acwb/claim.html
@@ -61,9 +61,9 @@
             <nav class="gc-subway provisional">
                <h1>Canada Workers Benefit</h1>
                <ul>
-                  <li><a href="#">Who is eligible</a></li>
-                  <li><a href="#" class="active">How to claim</a></li>
-                  <li><a href="#">How much you can get</a></li>
+                  <li><a href="eligible.html">Who is eligible</a></li>
+                  <li><a href="claim.html" class="active">How to claim</a></li>
+                  <li><a href="amounts.html">How much you can get</a></li>
                  
                </ul>
             </nav>
