--- a/subway/acwb/index.html
+++ b/subway/acwb/index.html
@@ -81,7 +81,7 @@
                            <dd>Find out if you are eligible to receive the Canada Workers Benefit</dd>
                            <dt><a href="amounts.html">How much you can get</a></dt>
                            <dd>Find out how much you are eligible for and when you will receive your payments</dd>
-                           <dt><a href="claim.html">How to claim the Canada Workers Benefit</a></dt>
+                           <dt><a href="claim.html">How to claim</a></dt>
                            <dd>Learn how to claim the Canada Workers Benefit</dd>
                           
                            
