--- a/fhsa/v2/transfers.html
+++ b/fhsa/v2/transfers.html
@@ -82,7 +82,7 @@
 		                   <li><a href="#h-5">Transfers from your FHSAs to your RRSPs or RRIFs</a></li>
 		                   <li><a href="#h-6">Transfers from a spousal or common-law partner RRSP</a></li>
 		                   <li><a href="#h-7">Making designated transfers from your FHSAs</a></li>
-<li><a href=#h-8">Transferring amounts on the breakdown of marriage or common-law partnership</a></li>
+<li><a href="#h-8">Transferring amounts on the breakdown of marriage or common-law partnership</a></li>
 
 
             </ul>
