--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1557,9 +1557,16 @@
 			<li class="code-num">
             <details>
             <summary id="cd_88">Code 88&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">self-employment</span></summary> 
-            <p>Report the gross amount of tax-exempt self-employment income paid to an Indian who is a fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88, Indian (exempt income) &ndash; Self-employment.</p>
-            <p><strong>Do not </strong>report this amount in box 14.</p>
-            <p>Learn more: <a href="#indian2">Indians who are self-employed</a></p>
+            <p>Report the tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>Taxable or partly tax-exempt income</dt>
+<dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx14">box 14</a>.</dd>
+</dl>
+
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+
             </details> 
 			</li>
 			</ul>
