--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1562,7 +1562,7 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Taxable or partly tax-exempt income</dt>
-<dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx14">box 14</a>.</dd>
+<dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
 </dl>
 
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
