--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1442,10 +1442,15 @@
             </details> 
 			</li>
 			<li class="code-num">
-            <details><summary id="cd_71">Code 71&nbsp;– Indian (exempt income)&nbsp;– Employment</summary> 
-            <p>Report the tax-exempt employment income of the Indian employee, using code 71. </p>
-            <p>If part of their employment income is taxable, report the taxable amount in box 14.</p>
-            <p>Learn more: <a href="#indian1">Indians employees</a></p>
+            <details><summary id="cd_71">Code 71&nbsp;– Indian (exempt income)&nbsp;– Employment</summary>       <p>Report the tax-exempt income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>Taxable or partly tax-exempt income</dt>
+<dd>If you pay taxable or partly tax-exempt income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
+</dl>
+
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
 			</li>
 			<li class="code-num">
