--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1435,10 +1435,15 @@
 			<li class="code-num">
             <details>
             <summary id="cd_69">Code 69&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">Non-eligible </span>retiring allowances</summary> 
-            <p>Enter code 69 and the amount of the retiring allowance that was paid to an Indian employee in the year and is <strong>not </strong>eligible for transfer to an RPP, RRSP or PRPP. </p>
-            <p><strong>Do not </strong>report this amount in box 14.</p>
-            <p>If you paid a retiring allowance to an Indian related to their taxable income, see codes 66 and 67.</p>
-            <p>Learn more: <a href="#indian1">Indian employees</a>.</p>
+            <p>Report the tax-exempt retiring allowance you paid to your employee  who is registered, or entitled to be registered under the Indian Act that is not eligible for transfer to an RPP, RRSP or PRPP using code 69.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>Taxable or partly tax-exempt retiring allowance</dt>
+<dd>If you pay taxable or partly tax-exempt retiring allowance, you must report using code 69 <strong>and</strong> <a href="#cd_66">code 66</a> if it is an eligible retiring allowance or <a href="#cd_67">code 67</a> if it is a non-eligible retiring allowance</dd>
+</dl>
+
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
 			</li>
 			<li class="code-num">
