--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1435,7 +1435,7 @@
 			<li class="code-num">
             <details>
             <summary id="cd_69">Code 69&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">Non-eligible </span>retiring allowances</summary> 
-            <p>Report the tax-exempt retiring allowance you paid to your employee  who is registered, or entitled to be registered under the Indian Act that is not eligible for transfer to an RPP, RRSP or PRPP using code 69.</p>
+            <p>Report the tax-exempt retiring allowance you paid to your employee  who is registered, or entitled to be registered under the Indian Act that is not eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1447,12 +1447,12 @@
             </details> 
 			</li>
 			<li class="code-num">
-            <details><summary id="cd_71">Code 71&nbsp;– Indian (exempt income)&nbsp;– Employment</summary>       <p>Report the tax-exempt income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
+            <details><summary id="cd_71">Code 71&nbsp;– Indian (exempt income)&nbsp;– Employment</summary>       <p>Report the tax-exempt employment income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Taxable or partly tax-exempt income</dt>
-<dd>If you pay taxable or partly tax-exempt income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
+<dd>If you pay taxable or partly tax-exempt employment income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
 </dl>
 
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
