--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1195,7 +1195,25 @@
             <li><strong>Strike pay </strong>that the union paid to union members </li>
             </ul>
             <p>Learn more: <a href="/en/revenue-agency/services/forms-publications/publications/it103r.html">Interpretation Bulletin IT-103R, Dues paid to a union or to a parity or advisory committee</a></p>
-            <p>If your employee is an Indian with tax-exempt employment income, see: <a href="#indian1">Indian employees</a>.</p>
+           
+
+<h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
+<p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report this amount using code box 44.</p>
+<p>Give your employee proof of the amounts of union dues for all tax-exempt income.</p>
+</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>
+
+
             </details>
 	       </li>
 		<li class="code-num">    
@@ -1204,6 +1222,28 @@
 <details>
             <summary id="bx_20">Box 20&nbsp;– RPP contributions</summary>
 <p>Report the total amount the employee contributed to a registered pension plan (RPP). Include instalment interest (for example, interest charged to buy back pensionable service). </p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Employee did not contribute</dt>
+<dd><strong>Do not</strong> report an amount if the employee <strong>did not</strong> contribute to a plan using box 20.</dd>
+
+<dt>Direct transfers</dt>
+<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
+
+<dt>Indian (exempt income)</dt>
+<dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
+<p>If you pay taxable or partly tax-exempt employment income, you must prorate the RPP contribution and report this amount using code box 20.</p>
+<p>Give your employee proof of the amounts of RPP contributions for all tax-exempt income.</p>
+</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>
+
             <p><strong>Do not </strong>report an amount in box 20 if the employee did not contribute to a plan.</p>
             <p><strong>Do not </strong>report these amounts in box 20:</p>
             <ul>
@@ -1437,7 +1477,7 @@
             <summary id="cd_69">Code 69&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">Non-eligible </span>retiring allowances</summary> 
             <p>Report the tax-exempt retiring allowance you paid to your employee  who is registered, or entitled to be registered under the Indian Act that is not eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situations</h4>
+ <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Taxable or partly tax-exempt retiring allowance</dt>
 <dd>If you pay taxable or partly tax-exempt retiring allowance, you must report using code 69 <strong>and</strong> <a href="#cd_66">code 66</a> if it is an eligible retiring allowance or <a href="#cd_67">code 67</a> if it is a non-eligible retiring allowance</dd>
@@ -1449,7 +1489,7 @@
 			<li class="code-num">
             <details><summary id="cd_71">Code 71&nbsp;– Indian (exempt income)&nbsp;– Employment</summary>       <p>Report the tax-exempt employment income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situations</h4>
+ <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Taxable or partly tax-exempt income</dt>
 <dd>If you pay taxable or partly tax-exempt employment income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
@@ -1569,7 +1609,7 @@
             <summary id="cd_88">Code 88&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">self-employment</span></summary> 
             <p>Report the tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
- <h4>Specific situations</h4>
+ <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Taxable or partly tax-exempt income</dt>
 <dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
