--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -144,7 +144,7 @@
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
-                  <li class="next"><a href="claim.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
+                  <li class="next"><a href="amounts.html" rel="next"><span class="wb-inv">Next: </span>How much you can get</a></li>
                </ul>
             </nav>
             <div id="def-preFooter"></div>
