--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1009,6 +1009,19 @@
             <li><a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">Employees outside Canada &nbsp;<span class="far fa-question-circle"></span></a> </li>
             <li><a href="#overpaid1" aria-controls="centred-popup" class="wb-lbx" role="button">Employee salary overpayments &nbsp;<span class="far fa-question-circle"></span></a> </li>
             </ul>
+
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
             </details>
 </li>
 		<li class="code-num">
@@ -1041,8 +1054,20 @@
             <li><strong>Do not </strong>report the recovered amount on the current year's T4 slip </li>
             <li>The recovered amount does not affect the current year-to-date CPP contributions </li>
             </ul>
-            <p>Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a></p>
-            
+         
+       <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>    
+   <p>Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a></p> 
             </details>
 </li>
 		<li class="code-num">
@@ -1066,6 +1091,20 @@
 	 <li class="cnjnctn-col">1 showing the province of employment as Quebec, the employee's QPP pensionable earnings in Quebec and the QPP contributions you deducted </li>
              <li class="cnjnctn-col">1 showing the applicable province or territory of employment (other than Quebec), the employee's CPP pensionable earnings and the CPP contributions you deducted </li>
             </ul>
+
+<h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>
+
             </details>  
     </li>
 		<li class="code-num">         
@@ -1095,6 +1134,18 @@
             </ul>
             <h4>Reporting the correct EI insurable earnings</h4>
             <p>Reporting the correct EI insurable earnings in box 24 will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p>
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
             </details>
 </li>
 		<li class="code-num">
@@ -1152,6 +1203,19 @@
         </details>    
 	<h4>Reporting the correct CPP pensionable earnings</h4>          
             <p>Reporting the correct CPP pensionable earnings in box 26 will reduce unnecessary pensionable and insurable earnings review (PIER) reports for CPP deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p>
+
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
             </details>
            </li>
 		<li class="code-num">
@@ -1181,6 +1245,20 @@
             <p>The requirements for deducting EI and Quebec Parental Insurance Plan (QPIP) premiums for employees in Quebec are different. </p>
             <p>Learn more about EI premiums: <a href="/cra-arc/payroll/calculate/when/eirates.html">Learn about EI, the premium rates and maximums</a></p>
             <p>Learn more about PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></p>
+
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
+
             </details>
 
 </li>
@@ -1318,6 +1396,18 @@
             <details>
             <summary id="bx_55">Box 55&nbsp;– Employee's PPIP premiums</summary>
             <p>If your employee worked in Quebec, report their provincial parental insurance plan (PPIP) premiums that you deducted.</p>
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
             </details>
 </li>
 		<li class="code-num">
@@ -1330,6 +1420,19 @@
             <li>The insurable earnings are the same as the employment income in box 14 </li>
             <li>The insurable earnings are more than the maximum for the year </li>
             </ul>
+
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
             </details>
 </li>
 		<li class="code-num">
