--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -157,12 +157,14 @@
 		 <p>If you did not get your payment on the expected date, please wait 10 working days before contacting the CRA.</p>
 		 <p>To view your personal benefit payment information, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a> or the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-mobile-apps.html">MyBenefits CRA mobile app</a>. You can also subscribe to the <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/payment-dates-reminder.html">benefit and credit payment dates reminders</a> elecronic mailing list to receive payment date reminders.</p>
 		 
-
-		 
-            <nav class="gc-subway-pagination">
+ <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
-               
+               <ul class="pager">
+                  <li class="next"><a href="claim.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
+               </ul>
             </nav>
+		 
+            
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
