--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1013,7 +1013,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1058,7 +1058,7 @@
        <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1095,7 +1095,7 @@
 <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1137,7 +1137,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1207,7 +1207,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1249,7 +1249,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1278,7 +1278,7 @@
 <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report this amount using code box 44.</p>
 <p>Give your employee proof of the amounts of union dues for all tax-exempt income.</p>
