--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1013,7 +1013,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1058,7 +1058,7 @@
        <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1095,7 +1095,7 @@
 <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1137,7 +1137,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1207,7 +1207,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1249,7 +1249,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1278,7 +1278,7 @@
 <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians</span></dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report this amount using code box 44.</p>
 <p>Give your employee proof of the amounts of union dues for all tax-exempt income.</p>
@@ -1309,7 +1309,7 @@
 <dt>Direct transfers</dt>
 <dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the RPP contribution and report this amount using code box 20.</p>
 <p>Give your employee proof of the amounts of RPP contributions for all tax-exempt income.</p>
@@ -1399,7 +1399,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1424,7 +1424,7 @@
   <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
 <dt>Add title</dt>
@@ -1582,7 +1582,7 @@
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Taxable or partly tax-exempt retiring allowance</dt>
+<dt>Taxable or partly tax-exempt retiring allowance <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd>If you pay taxable or partly tax-exempt retiring allowance, you must report using code 69 <strong>and</strong> <a href="#cd_66">code 66</a> if it is an eligible retiring allowance or <a href="#cd_67">code 67</a> if it is a non-eligible retiring allowance</dd>
 </dl>
 
@@ -1594,7 +1594,7 @@
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Taxable or partly tax-exempt income</dt>
+<dt>Taxable or partly tax-exempt income <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd>If you pay taxable or partly tax-exempt employment income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
 </dl>
 
@@ -1714,7 +1714,7 @@
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Taxable or partly tax-exempt income</dt>
+<dt>Taxable or partly tax-exempt income <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
 </dl>
 
