--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -763,7 +763,7 @@
 </details>
 
             <h2 id="h-4">How to fill out</h2>
-           
+          <p>  You can filter by key words to find information <strong>specific to your special situation</strong> .</p> 
             <div class="btn-group mrgn-tp-md">
             <button class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;on&quot;}" type="button">Expand all</button>
