--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -764,7 +764,26 @@
 
             <h2 id="h-4">How to fill out</h2>
           <p>  You can filter by key words to find information <strong>specific to your special situation</strong> .</p> 
-            <div class="btn-group mrgn-tp-md">
+<details><summary>List of special situations</summary>
+
+<ul>
+<li>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles </li>
+<li>Self-employed fishing income </li>
+<li>Placement or employment agency workers </li>
+<li>Salary deferral arrangements </li>
+<li>Indian employees </li>
+<li>Indians who are self-employed </li>
+<li>Seasonal Agricultural Workers Program </li>
+<li>Retiring allowances </li>
+<li>Canadian Forces personnel and police officers </li>
+<li>Emergency volunteers </li>
+<li>Employees with power saws or tree trimmers </li>
+<li>Employees outside Canada </li>
+<li>Employee salary overpayments </li>
+</ul>
+</details>
+         
+   <div class="btn-group mrgn-tp-md">
             <button class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;on&quot;}" type="button">Expand all</button>
             <button class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
