--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -763,25 +763,8 @@
 </details>
 
             <h2 id="h-4">How to fill out</h2>
-          <p>  You can filter by key words to find information <strong>specific to your special situation</strong> .</p> 
-<details><summary>List of special situations</summary>
+          <p>  You can filter by key words to find information <strong>specific to your <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a></strong> .</p> 
 
-<ul>
-<li>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles </li>
-<li>Self-employed fishing income </li>
-<li>Placement or employment agency workers </li>
-<li>Salary deferral arrangements </li>
-<li>Indian employees </li>
-<li>Indians who are self-employed </li>
-<li>Seasonal Agricultural Workers Program </li>
-<li>Retiring allowances </li>
-<li>Canadian Forces personnel and police officers </li>
-<li>Emergency volunteers </li>
-<li>Employees with power saws or tree trimmers </li>
-<li>Employees outside Canada </li>
-<li>Employee salary overpayments </li>
-</ul>
-</details>
          
    <div class="btn-group mrgn-tp-md">
             <button class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
@@ -1833,6 +1816,25 @@
 	<div data-ajax-replace="/cra-arc/payroll/register/what.html #ajax-account"></div>
 	</div></section>
 
+<section id="special" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">List of special situations</h2>
+	</header>	<div class="modal-body">	
+
+<ul>
+<li>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles </li>
+<li>Self-employed fishing income </li>
+<li>Placement or employment agency workers </li>
+<li>Salary deferral arrangements </li>
+<li>Indian employees </li>
+<li>Indians who are self-employed </li>
+<li>Seasonal Agricultural Workers Program </li>
+<li>Retiring allowances </li>
+<li>Canadian Forces personnel and police officers </li>
+<li>Emergency volunteers </li>
+<li>Employees with power saws or tree trimmers </li>
+<li>Employees outside Canada </li>
+<li>Employee salary overpayments </li>
+</ul>
+</div></section>
 
             <nav class="mrgn-bttm-lg mrgn-tp-lg">
             <h3 class="wb-inv">Document navigation</h3>
