--- a/fhsa/v2/index.html
+++ b/fhsa/v2/index.html
@@ -61,7 +61,7 @@
     <div class="wb-eqht row">
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Opening and closing your FHSAs</a></h3>
+          <h3><a href="open.html">Opening and closing your FHSAs</a></h3>
           <p>Who is eligible to open an FHSA and when to close your account</p>
         </section>
       </div>
